<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="730dp"
    tools:context=".BookingDetails">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/landing_view"
        android:id="@+id/landing_main"
        >
    </View>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/paws_bg_rounded"></ImageView>

    <GridLayout
        android:layout_width="386dp"
        android:layout_height="461dp"
        android:layout_below="@+id/landing_main"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="25dp"
        android:columnCount="1"
        android:rowCount="5">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <TextView
                android:layout_width="85dp"
                android:layout_height="61dp"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="100dp"
                android:text="Time Slot"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>

            <LinearLayout
                android:layout_width="157dp"
                android:layout_height="100dp"
                android:layout_marginLeft="140dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select timing" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="92dp"
                android:text="No. of Patrons"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_edit_text"
                    android:drawablePadding="8dp"
                    android:hint="Enter no."
                    android:padding="8dp"
                    android:textColor="#a29088"
                    android:textColorHighlight="#a29088" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginRight="120dp"
                android:layout_marginTop="20dp"
                android:text="Select Table"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/white">

                    <!-- Table Heading -->

                    <TableRow android:background="@color/colorGreen">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/col1"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/col2"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/col3"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />


                    </TableRow>

                    <!-- Table Data -->

                    <TableRow android:background="@color/colorGreen">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row1Name"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row1Age"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row1Surname"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow android:background="@color/colorGreen">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row2Name"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row2Age"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row2Surname"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow android:background="@color/colorGreen">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row3Name"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row3Age"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/row3Surname"
                            android:textSize="12sp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        android:text="Proceed">
    </Button>
</RelativeLayout>
